<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context=".RegisterDataPetsActivity">

    <LinearLayout
        android:layout_width="377dp"
        android:layout_height="660dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="33dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/rg_masc"
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@android:color/background_dark"
            android:drawableTint="@android:color/black"
            android:ems="10"
            android:hint="@string/nom_masc"
            android:inputType="textPersonName"
            android:textColor="@android:color/background_light"
            android:textColorHint="@android:color/background_light"
            android:textSize="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="243dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/edad_masc"
                android:textColor="@android:color/background_light"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editText4"
                android:layout_width="136dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="0 años"
                android:textColor="@color/colorPrimary" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="243dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rg_pso"
                android:textColor="@android:color/background_light"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editText5"
                android:layout_width="136dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="0 Kgs."
                android:textColor="@color/colorPrimary" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nom_rza"
                android:textColor="@android:color/background_light"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="276dp"
                android:layout_height="36dp"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimaryDark"
                android:entries="@array/rza_masc"

                android:foregroundTint="@color/colorPrimary" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="409dp"
                android:layout_height="52dp"
                android:layout_weight="1"
                android:text="@string/alim_marc"
                android:textColor="@android:color/background_light"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="305dp"
                android:layout_height="53dp"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimaryDark"
                android:entries="@array/alim_marc"
                android:foregroundTint="@color/colorPrimary" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="63dp"
                android:layout_weight="1"
                android:text="@string/hr_preg"
                android:textColor="@android:color/background_light"
                android:textSize="16sp"
                tools:text="@string/hr_preg" />

            <RadioGroup
                android:layout_width="286dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <RadioButton
                    android:id="@+id/radioButton"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:buttonTint="@color/colorPrimaryDark"
                    android:text="@string/rb1"
                    android:textAlignment="viewStart"
                    android:textColor="@color/colorPrimary" />

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:buttonTint="@color/colorPrimaryDark"
                    android:text="@string/rb2"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/colorPrimary" />
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="vertical"></LinearLayout>

        <Button
            android:id="@+id/button_sv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:onClick="onClick"
            android:text="@string/btn_save" />

    </LinearLayout>

</RelativeLayout>